# Kirksten3_snowflake-query

./: Dockerfile  README.md  action.yml  pyproject.toml
