[tool.poetry]
name = "snowflake-query"
version = "1.2"
description = "A github action to run a query against a Snowflake database"
authors = ["Kirksten3"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
snowflake-connector-python = "^3.3.0"
python-dotenv = "^1.0.0"
oscrypto = { git = "https://github.com/wbond/oscrypto.git", rev = "1547f53" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
